<resources>
    <string name="app_name">Навигатор \n для современных родителей</string>
    <string name="enter">Войти</string>
    <string name="register">Регистрация</string>
    <string name="guest_enrance">Продолжить как гость</string>
    <string name="no_account_register">Нет аккаунта? <u>Зарегистрируйтесь</u></string>
    <string name="log_in_account_text">Войдите в аккаунт</string>
    <string name="enter_username">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="already_have_account_enter">Уже есть аккаунт? <u>Войдите</u></string>
    <string name="skip"><u>Пропустить</u></string>

    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Навигатор для современных родителей</string>
    <string name="nav_header_subtitle">tiptop73@mail.ru</string>

    <string name="next">Продолжить</string>

    <string name="chat"><u>Чат</u></string>
    <string name="menu_account"><u>Аккаунт</u></string>
    <string name="menu_articles"><u>Статьи</u></string>
    <string name="menu_note"><u>Запись к специалисту</u></string>
    <string name="menu_our_note"><u>Ваши записи</u></string>

    <string name="action_settings">Settings</string>
    <string name="article_start_page">Опираясь на возраст ребенка и интересующую Вас тему, мы покажем Вам самые полезные статьи</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_age_page">Выбор возраста ребенка позволит отобразить только актуальные для Вас статьи</string>

    <string-array name="ages">
        <item>Выберите возраст</item>
        <item>0-3</item>
        <item>4-7</item>
        <item>8-12</item>
        <item>13-17</item>
    </string-array>
    <string name="title_activity_sections_age">SectionsAgeActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_articles_scrolling">ArticlesScrollingActivity</string>


    <string-array name="cities">
        <item>Выберите город</item>
        <item>Ульяновск</item>
        <item>Иркутск</item>
    </string-array>

    <string-array name="specialist_ULV">
        <item>Выберите специалиста</item>
        <item>А. В. Миллер</item>
        <item>А. А. Бритков</item>
        <item>А. М. Кобякина</item>
    </string-array>

    <string-array name="specialist_IRK">
        <item>Выберите специалиста</item>
        <item>И. Е. Пешкин</item>
        <item>М. К. Лисицын</item>
    </string-array>

    <string-array name="specialist_NO">
        <item>Выберите специалиста</item>
        <item>Сначала надо выбрать город :)</item>
    </string-array>

    <string-array name="date">
        <item>Выберите дату</item>
        <item>20.01.2023</item>
        <item>21.01.2023</item>
        <item>22.01.2023</item>
        <item>23.01.2023</item>
        <item>24.01.2023</item>
        <item>25.01.2023</item>

    </string-array>

    <string-array name="time">
        <item>Выберите время</item>
        <item>10:30</item>
        <item>12:00</item>
        <item>13:30</item>
        <item>15:00</item>
        <item>16:30</item>
    </string-array>
</resources>