<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_account">

    <fragment
        android:id="@+id/nav_account"
        android:name="ru.itmo.navigator_for_parents_app.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_articles"
        android:name="ru.itmo.navigator_for_parents_app.ui.articles.ArticlesFragment"
        android:label="@string/menu_articles"
        tools:layout="@layout/fragment_article" />

    <fragment
        android:id="@+id/nav_note"
        android:name="ru.itmo.navigator_for_parents_app.ui.note.NoteFragment"
        android:label="@string/menu_note"
        tools:layout="@layout/fragment_note" />

    <fragment
        android:id="@+id/nav_our_notes"
        android:name="ru.itmo.navigator_for_parents_app.ui.notes.NotesFragment"
        android:label="@string/menu_our_note"
        tools:layout="@layout/fragment_our_notes" />
</navigation>