<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <View
        android:id="@+id/subtract"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/background_entry" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="10dp"
        android:layout_height="18dp"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:background="@drawable/back"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <Button
            android:id="@+id/skip"
            android:layout_width="95dp"
            android:layout_height="18dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:text="@string/skip"
            android:fontFamily="@style/MyTextView"
            android:textColor="#2B2B2B"
            android:textSize="13sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:id="@+id/logo_app"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/logo"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/log_in_account_text"
            android:gravity="center"
            android:textColor="#5B78EB"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginBottom="7dp">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/enter_login"
            android:textColorHint="#5B78EB"
            android:theme="@style/EditTextThemeOverlay">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#5B78EB"
                android:id="@+id/login"
                android:hint="@string/enter_username"
                android:autofillHints="username"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/enter_password"
            android:textColorHint="#5B78EB"
            android:theme="@style/EditTextThemeOverlay"
            android:fontFamily="@style/MyTextView">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#5B78EB"
                android:id="@+id/password"
                android:hint="@string/enter_password"
                android:autofillHints="password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/enter"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/enter_button"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="7dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|bottom"
        android:layout_marginBottom="30dp">
        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account_register"
            android:textSize="12sp"
            android:textColor="#5A5A5A"
            android:background="@null"
            >
        </Button>

    </LinearLayout>





</RelativeLayout>